--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,4 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  AUTH_SECRET: \xE0\xFC\xD7\x03\xA9\xF9\xEE\xC4\xBC\xF80<D{F\x8AG\xF2\xF1)\xF1t\xF6x\n3\xFEt\xE8\x94\xB1\xCE
