--- a/.ebextensions/files.config
+++ b/.ebextensions/files.config
@@ -1,10 +1,7 @@
 files:
-  "/etc/nginx/conf.d/01_proxy.conf":
-    mode: "000644"
-    owner: root
-    group: root
+  /etc/nginx/conf.d/proxy.conf:
     content: |
-      client_max_body_size 10M;
+      client_max_body_size 50M;
 
 container_commands:
   01_reload_nginx:
