adjust content max body size

--- a/.ebextensions/proxy.config
+++ b/.ebextensions/proxy.config
@@ -4,5 +4,6 @@ files:
         owner: root
         group: root
         content: |
-           upload_max_filesize = 64M;
-           post_max_size = 64M;
+           client_max_body_size 10M;
+           sendfile on;
+           send_timeout 1800;
