--- a/.ebextensions/01_files.config
+++ b/.ebextensions/01_files.config
@@ -1,7 +1,9 @@
 files:
-    "/etc/nginx/conf.d/proxy.conf" :
-        mode: "000755"
-        owner: root
-        group: root
-        content: |
-           client_max_body_size 20M;
+  "/etc/nginx/conf.d/proxy.conf" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+        http {
+          client_max_body_size 20M;
+        }
